fix: project section display on mobile

--- a/src/sections/projects/ProjectsSection.module.scss
+++ b/src/sections/projects/ProjectsSection.module.scss
@@ -47,6 +47,8 @@
 }
 
 .gsapTrack {
+  display: flex;
+  width: max-content;
   will-change: transform;
 }
 
